get attendees list from mongo and route to send-emails endpoint

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 SENDGRID_API_KEY="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"
 DB_USERNAME="elaine"
 DB_PASSWORD="hackwestern2021"
+DB_NAME="virtual_event_app"
