--- a/app/server/package.json
+++ b/app/server/package.json
@@ -12,12 +12,12 @@
     "nodemon": "^2.0.15"
   },
   "dependencies": {
-    "mongoose": "^6.0.13",
-    "nodemon": "^2.0.15",
     "axios": "^0.24.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongodb": "^4.2.0"
+    "mongodb": "^4.2.0",
+    "mongoose": "^6.0.13",
+    "nodemon": "^2.0.15"
   }
 }
