--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ SENDGRID_API_KEY="SG._XCNHKYFRzSF5IjbqiBGYw.ZdhkoaadHBDA3yYc8K5_m49ELjgNlt942J0h
 DB_USERNAME="elaine"
 DB_PASSWORD="hackwestern2021"
 DB_NAME="virtual_event_app"
+COLLECTION="events"
+EVENT_CODE="00001"
