--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "nodemon": "^2.0.15"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.6.0",
     "axios": "^0.24.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
