--- a/app/package.json
+++ b/app/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "3d-react-carousal": "^4.0.2",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "3d-react-carousal": "^4.0.2",
+    "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-carousel-minimal": "^1.4.1",
     "react-dom": "^17.0.2",
