--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongodb": "^4.2.0",
-    "multer": "^1.4.3"
+    "multer": "^1.4.3",
+    "underscore": "^1.13.1"
   }
 }
